# next-level-python

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: mkdocs-image.yml
cookiecutter-templates/python-microservice/: .gitignore  .gitlab-ci.yml  Makefile  README.md  cookiecutter.json
cookiecutter-templates/python-microservice/tests/: context.yaml  test_project_generation.py
cookiecutter-templates/python-microservice/{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENCE  Makefile  README.md  build_and_run.sh  build_dev_image.sh  config.sh  init_container.sh  init_host.sh  pyproject.toml
cookiecutter-templates/python-microservice/{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
cookiecutter-templates/python-microservice/{{cookiecutter.project_slug}}/docker/: Dockerfile
cookiecutter-templates/python-microservice/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  version.py
cookiecutter-templates/python-microservice/{{cookiecutter.project_slug}}/tests/: test_main.py
docker-images/mkdocs/: Dockerfile  README.md  build.sh  config.sh  demo.sh  requirements.txt
docker-images/mkdocs/test_docs/: mkdocs.yml
docker-images/mkdocs/test_docs/docs/: index.md
docker-images/mkdocs/test_docs/docs/blog/: index.md
docker-images/mkdocs/test_docs/docs/blog/posts/: feature-fiasco.md  forbidden-fuction.md  hello-world.md
examples/configuration/: README.md  config.py  test_config.py
